--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -422,7 +422,7 @@ permalink: /pmx
                                   <div class="pmx-selector pmx-selector--semsearch-tag">
                                     <div class="pmx-selector__value">
                                       <div class="pmx-selector__label ">
-                                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum
+                                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
                                       </div>
                                     </div>
                                   </div>
