--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -372,21 +372,21 @@ permalink: /pmx
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum
+                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
                       </div>
                     </div>
                   </div>
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum
+                        <span class="pmx-selector--semsearch-tag__type">Assigned to ܌</span> Nick De Jaeger
                       </div>
                     </div>
                   </div>
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum
+                        <span class="pmx-selector--semsearch-tag__type">Priority ܌</span> dialog-wrapper
                       </div>
                     </div>
                   </div>
