--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -372,35 +372,35 @@ permalink: /pmx
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                        <span class="pmx-selector--semsearch-tag__type">Title •</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
                       </div>
                     </div>
                   </div>
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Assigned to ܌</span> Nick De Jaeger
+                        <span class="pmx-selector--semsearch-tag__type">Assigned to •</span> Nick De Jaeger
                       </div>
                     </div>
                   </div>
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Priority ܌</span> dialog-wrapper
+                        <span class="pmx-selector--semsearch-tag__type">Priority •</span> dialog-wrapper
                       </div>
                     </div>
                   </div>
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum
+                        <span class="pmx-selector--semsearch-tag__type">Title •</span> Lorem ipsum
                       </div>
                     </div>
                   </div>
                   <div class="pmx-selector pmx-selector--semsearch-tag">
                     <div class="pmx-selector__value">
                       <div class="pmx-selector__label ">
-                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum
+                        <span class="pmx-selector--semsearch-tag__type">Title •</span> Lorem ipsum
                       </div>
                     </div>
                   </div>
@@ -422,7 +422,7 @@ permalink: /pmx
                                   <div class="pmx-selector pmx-selector--semsearch-tag">
                                     <div class="pmx-selector__value">
                                       <div class="pmx-selector__label ">
-                                        <span class="pmx-selector--semsearch-tag__type">Title ܌</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+                                        <span class="pmx-selector--semsearch-tag__type">Title •</span> Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
                                       </div>
                                     </div>
                                   </div>
@@ -437,7 +437,7 @@ permalink: /pmx
                                   <div class="pmx-selector pmx-selector--semsearch-tag">
                                     <div class="pmx-selector__value">
                                       <div class="pmx-selector__label ">
-                                        <span class="pmx-selector--semsearch-tag__type">Assigned to ܌</span> Nick De Jaeger
+                                        <span class="pmx-selector--semsearch-tag__type">Assigned to •</span> Nick De Jaeger
                                       </div>
                                     </div>
                                   </div>
@@ -452,7 +452,7 @@ permalink: /pmx
                                   <div class="pmx-selector pmx-selector--semsearch-tag">
                                     <div class="pmx-selector__value">
                                       <div class="pmx-selector__label ">
-                                        <span class="pmx-selector--semsearch-tag__type">Priority ܌</span> dialog-wrapper
+                                        <span class="pmx-selector--semsearch-tag__type">Priority •</span> dialog-wrapper
                                       </div>
                                     </div>
                                   </div>
