--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -416,6 +416,21 @@ permalink: /pmx
             <div class="itemBox">
                 <div class="itemBoxTable">
                     <div class="itemBoxBody">
+                      <ul class="itemBoxTable__bodyRow">
+                          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--text" style="flex-grow: 1;">
+                              <div class="itemBoxTable__bodyCellInner">
+
+                                <div class="pmx-selector pmx-selector--semsearch-tag">
+                                  <div class="pmx-selector__value">
+                                    <div class="pmx-selector__label ">
+                                      <span class="pmx-selector--semsearch-tag__type">Any •</span> Typed keyword
+                                    </div>
+                                  </div>
+                                </div>
+
+                              </div>
+                          </li>
+                      </ul>
                         <ul class="itemBoxTable__bodyRow">
                             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--text" style="flex-grow: 1;">
                                 <div class="itemBoxTable__bodyCellInner">
