--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -13,9 +13,9 @@ permalink: /pmx
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/old-pmx.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/multiSelector.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/itemBox.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/selector.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/components/multiSelector.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/components/itemBox.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/components/selector.css">
 </head>
 
 <body>
