--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -68,7 +68,7 @@ permalink: /pmx
         <div class="hdr-menu-container">
             <div class="hdr-title">
                 <h4>
-                    <span class="ph-breadcrumb-first"><a href="/acc_story663626-wd/workspace/1/summary" class="ph-breadcrumb" tabindex="-1">PMX</a></span>
+                    <span class="ph-breadcrumb-first"><a href="/acc_story663626-wd/workspace/1/summary" class="ph-breadcrumb" tabindex="-1">Dashboard</a></span>
                 </h4>
             </div>
         </div>
