--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Old App
+permalink: /pmx
 ---
 
 <div class="app cf document__info--visible">
@@ -21,7 +22,7 @@ title: Old App
 
 
 
-    
+
 
     <div class="tabline" id="tabline">
         <div class="tabs">
