--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -19,11 +19,6 @@ permalink: /pmx
     <header class="old-app-header app-header cf">
       {% include blocks/app-header-no-breadcrumb.html %}
     </header>
-
-
-
-
-
     <div class="tabline" id="tabline">
         <div class="tabs">
             <div class="tab-scroller">
@@ -37,11 +32,7 @@ permalink: /pmx
         </div>
     </div>
 
-    <div class="listtools-container">
-        <div class="listtools" id="listtools">
-        </div>
-        <div class="clear"></div>
-    </div>
+    {% include blocks/listtool.html %}
 
     <div id="ctl00_pagebody_container" class="pagebody-container">
         <div class="pagebody">
