trigger to open new multiselector

--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -21,12 +21,14 @@ permalink: /pmx
     </header>
 
 
-    
+
     {% include blocks/old-pmx-tabline.html %}
 
     {% include blocks/old-pmx-listtool.html %}
 
     {% include blocks/old-pmx-table.html %}
+
+    {% include popups/new-multiselect.html %}
 
     <div class="footer-container">
         <div class="footer" style="position: relative; top: -44px;">
