--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -38,3 +38,31 @@ permalink: /pmx
 
   </main>
 </div>
+
+
+<!-- ALL FOR JQUERY -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
+<!-- END -->
+
+<!-- ALL FOR TABS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/tabs.js"></script>
+<!-- END -->
+
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/root.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
+
+<!-- PLUGINS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
+
+<!-- COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
+
+<!-- OLD COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
