--- a/pages/v1.0/new.html
+++ b/pages/v1.0/new.html
@@ -20,16 +20,16 @@ permalink: /v1.0/new
     <div class="app__overlay"></div>
 
     <div class="app__nav__wrapper">
-      {% include blocks/app-nav.html %}
+      {% include v1.0/blocks/app-nav.html %}
     </div>
 
     <div class="notifications">
-      {% include blocks/notifications.html %}
+      {% include v1.0/blocks/notifications.html %}
     </div>
 
     <main class="app__container">
       <header class="app-header cf">
-        {% include blocks/app-header.html %}
+        {% include v1.0/blocks/app-header.html %}
       </header>
 
       <div class="app__document app__document--story">
@@ -91,7 +91,7 @@ permalink: /v1.0/new
   </div>
   <!-- /.app -->
 
-  {% include foot.html %}
+  {% include v1.0/foot.html %}
 </body>
 
 </html>
