fixes to right panel

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -55,9 +55,7 @@ permalink: /mobile
           <!-- /.document__info-data -->
         </div>
         <div class="panel__right">
-          <div class="document__comment">
-              such documents
-          </div>
+          {% include blocks/document-comments.html %}
         </div>
 
       </div>
