added mobile blocks

--- a/pages/mobile.html
+++ b/pages/mobile.html
@@ -46,16 +46,16 @@ permalink: /mobile
 
       <div class="mobile__content">
         <div class="panel__left">
-          {% include blocks/document-steps.html %}
+          {% include blocks/mobile-steps.html %}
         </div>
         <div class="panel__center">
           <div class="document__info-data cf">
-            {% include blocks/document-data.html %}
+            {% include blocks/mobile-data.html %}
           </div>
           <!-- /.document__info-data -->
         </div>
         <div class="panel__right">
-          {% include blocks/document-comments.html %}
+          {% include blocks/mobile-comments.html %}
         </div>
 
       </div>
