--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -55,6 +55,7 @@ permalink: /pmx
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
 
 <!-- PLUGINS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
 
