--- a/pages/components.html
+++ b/pages/components.html
@@ -224,3 +224,13 @@ permalink: /components
     </div>
   </div>
 </div>
+
+
+
+
+<!-- ALL FOR JQUERY -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- END -->
+
+<!-- COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
