--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: old-pmx
 title: Old App
 permalink: /pmx
 ---
@@ -19,8 +19,6 @@ permalink: /pmx
     <header class="old-app-header app-header cf">
       {% include blocks/app-header-no-breadcrumb.html %}
     </header>
-
-
 
     {% include blocks/old-pmx-tabline.html %}
 
